fixed off-center on shader pages.

--- a/Resources/Scripts/attribs.css
+++ b/Resources/Scripts/attribs.css
@@ -205,9 +205,7 @@ P {
     margin-right: auto;
     margin-bottom: 50px;
     padding-top: 20px;
-    width: 90%;
-    max-width: 900px;
-    margin: 50px calc(50% - 450px);
+    width: 78%;
     text-align-last:center;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
